--- a/src/css/section/intro.css
+++ b/src/css/section/intro.css
@@ -51,7 +51,7 @@
     width: 50px;
     height: 60px;
     border-radius: 48%;
-    border: 2px solid #333;
+    border: 2px solid royalblue;
     right:50px;
     bottom: 20px;
 }
@@ -64,7 +64,7 @@
     border-radius: 99%;
     right: 70px;
     bottom: 30px;
-    border: 2px solid #333;
+    border: 2px solid royalblue;
     transition: .35s;
     animation: mouse 2s infinite;
 }
